--- a/inventory-mock.html
+++ b/inventory-mock.html
@@ -1,4 +1,5 @@
-<html lang="en" ng-app="cae">
+<!DOCTYPE html>
+<html lang="en" ng-app="cae" class="inventory">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -46,7 +47,7 @@
 			</div>
 		</nav>
 		<div class="container-fluid">
-			<div class="row inventory">
+			<div class="row ">
 				<div class="col-sm-3 col-md-2 sidebar">
 					<ul class="nav nav-sidebar">
 						<li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>
