update bootstrap and tech page

--- a/tech-mock.html
+++ b/tech-mock.html
@@ -61,6 +61,7 @@
 							<div class="col-sm-6">
 							<h2>Company Name</h2>
 							<h3>Job Type</h3>
+							<h4>Estimated Start: 9:00 AM</h4>
 							<address>
 								<strong>Contact: John Smith</strong>
 								<br>
@@ -70,8 +71,63 @@
 							</address>
 							</div>
 							<div class="col-sm-6 " id="map-container" > need api key</div>
-							
+						</div>
+						<div class="well">
+							<h2 class="text-center">Work Sheet</h2>
+							<dl class="dl-horizontal">
+								<dt>Description</dt>
+								<dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam esse voluptatum, reiciendis eius pariatur blanditiis vel ducimus doloribus. Sed id, fuga dolorem. Assumenda adipisci laboriosam rem deserunt fuga, eos at. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti cum accusantium magni expedita in ratione, ipsam rerum porro delectus quo. Eaque, voluptates repellat reiciendis ut ipsam odit molestiae expedita eius!</dd>
 
+								<dt>Special Instructions</dt>
+								<dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam esse voluptatum, reiciendis eius pariatur blanditiis vel ducimus doloribus. Sed id, fuga dolorem. Assumenda adipisci laboriosam rem deserunt fuga, eos at. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti cum accusantium magni expedita in ratione, ipsam rerum porro delectus quo. Eaque, voluptates repellat reiciendis ut ipsam odit molestiae expedita eius!</dd>
+							</dl>
+							<h2>Parts List</h2>
+							<ul class="list-group">
+								<li class="list-group-item">
+									<span class="badge">14</span>
+									Cras justo odio
+								</li>
+								<li class="list-group-item list-group-item-danger">
+									<span class="badge">1</span>
+									sto odio
+								</li>
+								<li class="list-group-item">
+									<span class="badge">2</span>
+									Crao
+								</li>
+								<li class="list-group-item">
+									<span class="badge">3</span>
+									justoCras odio
+								</li>
+
+							</ul>
+							<div class="clearfix">
+								<form >
+									<div class="form-group clearfix">
+										<label for="textareaNotes" class="col-sm-2 control-label">Notes:</label>
+										<div class="col-sm-10">
+											<textarea name="notes" id="textareaNotes" class="form-control" rows="8" ></textarea>
+										</div>
+									</div>
+									<div class="form-group clearfix">
+										<label for="inputAdditionalPart" class="col-xs-12 col-sm-2 control-label">Additional Parts:</label>
+										<div class="col-xs-8">
+											<input type="text" name="additionalPart" id="inputAdditionalPart" class="form-control" value=""  >
+										</div>
+										<div class="col-xs-2">
+											<button type="button" class="btn btn-default">Add</button>
+										</div>
+									</div>
+									<hr>
+									<div class="form-group clearfix">
+										<label for="inputTotalTime" class="col-sm-2 control-label">Total Time:</label>
+										<div class="col-sm-10">
+											<input type="number" name="totalTime" id="inputTotalTime" class="form-control" step="" >
+										</div>
+									</div>
+									<button type="submit" class="btn btn-primary pull-right">Complete Job</button>
+								</form>
+							</div>
 						</div>
 
 					</form>
