--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
           </label>
         </div> -->
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-        <a href="dashboard.html">bypass</a>
+        <a href="manager.html">bypass manager</a><br>
+        <a href="shopTech.html">bypass shop tech</a>
       </form>
 
     </div> <!-- /container -->
