new job function

--- a/public/manager.html
+++ b/public/manager.html
@@ -76,6 +76,7 @@
 		<script src="js/ie10-viewport-bug-workaround.js"></script>
 		<script src="js/angular.min.js"></script>
 		<script src="js/angular-route.min.js"></script>
+		<script src="js/ui-bootstrap-tpls-2.3.0.min.js"></script>
 		<script src="controllers/manager.js"></script>
 		
 	</body></html>
