--- a/public/index.html
+++ b/public/index.html
@@ -28,21 +28,44 @@
 
     <div class="container">
 
-      <form class="form-signin">
-        <h2 class="form-signin-heading">Please sign in</h2>
+        <div class="personnel row">
+          <div class="col-sm-6 col-md-4 col-md-offset-2">
+            <div class="thumbnail text-center">
+              <span class="glyphicon glyphicon-king"></span>
+              <div class="caption">
+                <h3>Managers</h3>
+                <!-- <p>...</p> -->
+                <p><a href="manager.html" class="btn btn-primary" role="button">Dashboard</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <div class="thumbnail text-center">
+              <span class="glyphicon glyphicon-knight"></span>
+              <div class="caption">
+                <h3>Techs</h3>
+                <!-- <p>...</p> -->
+                <p><a href="shopTech.html" class="btn btn-primary" role="button">Dashboard</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      <!-- <form class="form-signin">
+        <h2 class="form-signin-heading">Please sign in now</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required=""> -->
         <!-- <div class="checkbox">
           <label>
             <input type="checkbox" value="remember-me"> Remember me
           </label>
         </div> -->
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <!-- <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         <a href="manager.html">bypass manager</a><br>
         <a href="shopTech.html">bypass shop tech</a>
-      </form>
+      </form> -->
 
     </div> <!-- /container -->
 
