--- a/public/manager.html
+++ b/public/manager.html
@@ -38,7 +38,7 @@
 						<li><a href="#">Dashboard</a></li>
 						<li><a href="#/inventory">Inventory</a></li>
 						<li><a href="#/jobs">Jobs</a></li>
-						<li><a href="#">Reports</a></li>
+						<li><a href="#invoice">Invoice</a></li>
 					</ul>
 					
 				</div>
@@ -58,7 +58,7 @@
 						<li yw-menu-id="AddJob"><a href="#/addJob">Add Job</a></li>
 					</ul>
 					<ul class="nav nav-sidebar">
-						<li yw-menu-id="Reports"><a href="">Reports</a></li>
+						<li yw-menu-id="Invoice"><a href="#invoice">Invoice</a></li>
 					</ul>
 				</div>
 				<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
