--- a/public/shopTech.html
+++ b/public/shopTech.html
@@ -31,7 +31,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Office Tracking</a>
+					<a class="navbar-brand" href="/">Office Tracking</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
@@ -60,7 +60,8 @@
 		<script src="js/ie10-viewport-bug-workaround.js"></script>
 		<script src="js/angular.min.js"></script>
 		<script src="js/angular-route.min.js"></script>
-		<script src="js/shoptech.js"></script>
+		<script src="js/ui-bootstrap-tpls-2.3.0.min.js"></script>
+		<script src="controllers/shoptech.js"></script>
 		<script>	
 		 
 		  //     function init_map() {
