--- a/public/manager.html
+++ b/public/manager.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 		<!-- <link rel="icon" href="../../favicon.ico"> -->
-		<title>airField: {{getTitle()}}</title>
+		<title>{{getTitle()}}</title>
 		<!-- Bootstrap core CSS -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
